
syntax = "proto3";

//namespace for generated code
option csharp_namespace = "gRPC.Basic";

//namespace of the protocol buffer messages, helps prevent namespace clashes 
package greet;

// The greeting service definition.
service Greeter {
  // rpc definitions
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message 
message HelloRequest {
  string name = 1;
 
}

// The response message
message HelloReply {
  string message = 1;
}



